--- a/public/global.css
+++ b/public/global.css
@@ -181,7 +181,7 @@ h3 {
 	border-radius: .5em;
 	padding: 2rem;
 	background: black;
-	margin-top: 2rem;
+	margin-top: 4rem;
 	position: relative;
 }
 
@@ -195,7 +195,7 @@ ol.category {
 	background: black;
 	position: relative;
 	line-height: 1;
-	top: calc(-.7rem + -.5em + -1rem);
+	top: calc(-.7rem + -.5em + -1.1rem);
 	box-sizing: border-box;
 	text-align: center;
 	display: inline-block;
@@ -205,8 +205,9 @@ ol.category {
 }
 
 .category h2 .icon {
-	width: 1.5em!important;
+	width: 1.25em!important;
 	vertical-align: middle;
+	margin-right: .25em;
 }
 
 .category ul {
